<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#BE000000"
    >

    <ImageView
            android:layout_width="220dp"
            android:layout_height="180dp"
            android:src="@drawable/l0d"
            android:layout_marginBottom="40dp"
            android:id="@+id/two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color2"
        android:text="@string/App_namemention"
        android:textStyle="bold"
        android:textSize="35dp"
        android:fontFamily="cursive"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color2"
        android:layout_marginTop="20dp"
        android:text="@string/powered_by"
        android:textSize="12dp"
        android:textStyle="italic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color2"
        android:layout_marginTop="40dp"
        android:text="@string/company_name"
        android:textStyle="bold"
        android:textSize="35dp"
        android:fontFamily="cursive"
        />

</LinearLayout>