<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#95000000"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="2dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="#A1000000"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_weight="10"
            android:layout_marginLeft="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:id="@+id/time_"
                android:textColor="@color/text_color2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/date_"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_color2"

                />
        </LinearLayout>
        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:text="40\u2103"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:id="@+id/temperature_"
            android:textColor="@color/text_color2"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:src="@color/colorPrimary"
            android:layout_marginRight="5dp"
            android:id="@+id/icon_"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="25"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:fontFamily="sans-serif"
                android:textSize="13dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/text_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="13dp"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/text_color"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/pressure"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/sea_level"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="25"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/weather_"
                android:textColor="@color/text_color2"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/description_"
                android:textColor="@color/text_color2"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="13dp"
                android:textStyle="bold"
                android:id="@+id/pressure_"
                android:textColor="@color/text_color2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="13dp"
                android:textStyle="bold"
                android:id="@+id/sea_level_"
                android:textColor="@color/text_color2"
                />



        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="25"
            android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humadity"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_color"
                android:textSize="13dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/wind_speed"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_degree"
                android:textSize="13dp"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/text_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/grand_level"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />

            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="25"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_color2"
                android:textSize="13dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/humadity_"
                />
            <TextView
                android:id="@+id/windspeed_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text_color2"
                android:textSize="13dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/winddegree_"
                android:textColor="@color/text_color2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/grandlevel_"
                android:textColor="@color/text_color2"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
